# prf-ai-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_pending_review.py  0003_add_knowledge_chunks.py  0004_add_eval_runs.py  0005_add_eval_run_models.py  0006_add_audit_token_counts.py
backend/evals/results/: baseline.json
backend/knowledge/: ask_strategy_guidelines.md  compliance_guidelines.md  donor_stewardship.md  impact_stats_2025.md  program_outcomes.md  success_stories.md
backend/scripts/: ingest_knowledge.py  run_evals.py  run_workflow_cli.py  seed_db.py  smoke_test_llm.py
backend/src/app/: main.py
backend/src/app/api/: deps.py
backend/src/app/core/: audit.py  config.py  llm.py  logging.py
backend/tests/: conftest.py
backend/tests/integration/: test_chained_graph_integration.py  test_checkpoint_resume.py  test_donor_verification_integration.py  test_review_queue_endpoint.py
backend/tests/unit/: test_address_intelligence_agent.py  test_address_mcp_fixtures.py  test_campaign_personalization_agent.py  test_campaign_personalization_rules.py  test_crm_mcp_tools.py  test_donation_recommendation_agent.py  test_donor_verification_agent.py  test_eval_case_selection.py  test_eval_report.py  test_eval_scorers.py  test_graph_routing.py  test_human_review_agent.py  test_llm_ollama_base_url.py  test_pdf_generation_agent.py  test_print_vendor_mcp_fixtures.py  test_rfm.py  test_token_usage.py  test_workflow_tasks.py
(+95 files in other folders)
