[project]
name = "prf-ai-pipeline-backend"
version = "0.1.0"
description = "Agentic AI backend for the PRF AI Pipeline nonprofit fundraising platform"
authors = [
    { name = "Umesh", email = "umesh836@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.9",
    "langchain>=0.3.9",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-mcp-adapters>=0.0.5",
    "mcp>=1.1.0",
    "pgvector>=0.3.6",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "structlog>=24.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "app"
module-root = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: real-stack tests (Postgres, MCP, live LLM) — opt in with -m integration",
]
testpaths = ["tests"]
addopts = "-m 'not integration'"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
